--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -222,7 +222,7 @@ npc_citizen_medic_throw_style "1"
 windows_speaker_config "1"
 snd_legacy_surround "0"
 snd_pitchquality "1"
-volume ".01"
+volume "0.020000"
 snd_musicvolume "1.000000"
 snd_mixahead "0.1"
 adsp_debug "0"
