--- a/cfg/skill.cfg
+++ b/cfg/skill.cfg
@@ -137,9 +137,9 @@ sk_plr_dmg_alyxgun		"5"
 sk_npc_dmg_alyxgun		"3"
 sk_max_alyxgun			"150"
 
-sk_plr_dmg_pistol		"5"
-sk_npc_dmg_pistol		"3"
-sk_max_pistol			"200"
+sk_plr_dmg_9mm		"5"
+sk_npc_dmg_9mm		"3"
+sk_max_9mm			"300"
 
 sk_plr_dmg_smg1			"5"
 sk_npc_dmg_smg1			"3"
@@ -153,18 +153,13 @@ sk_plr_dmg_rpg_round		"100"
 sk_npc_dmg_rpg_round		"50"
 sk_max_rpg_round			"3"
 
-sk_plr_dmg_smg1_grenade		"100"
-sk_npc_dmg_smg1_grenade		"50"
-sk_max_smg1_grenade		"3"
-sk_smg1_grenade_radius		"250"
-
 sk_plr_dmg_sniper_round		"20"
 sk_npc_dmg_sniper_round		"100"
 sk_max_sniper_round			"30"
 
-sk_plr_dmg_357				"100"
-sk_npc_dmg_357				"30"
-sk_max_357					"12"
+sk_plr_dmg_50ae				"100"
+sk_npc_dmg_50ae				"30"
+sk_max_50ae					"35"
 
 sk_plr_dmg_crossbow			"100"
 sk_npc_dmg_crossbow			"10"
