--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-*.txt text
-*.res text
+*.txt text eol=crlf
+*.res text eol=crlf
